Create a basic html calculator with some buttons

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
         <title>Calculator</title>
     </head>
     <body>
-        
+        <div id="calculator">
+            <div id="display"></div>
+            <div id="buttons-container">
+                <button class="btn">+</button>
+                <button class="btn">-</button>
+                <button class="btn">×</button>
+                <button class="btn">÷</button>
+                <button class="btn">=</button>
+                <button class="btn">CLEAR</button>
+            </div>
+        </div>
     </body>
 </html>
