Add 0 - 9 digits buttons

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
     </head>
     <body>
         <div id="calculator">
-            <div id="display"></div>
+            <div id="display">2 + 3 = 5</div>
             <div id="buttons-container">
-                <button class="btn">+</button>
-                <button class="btn">-</button>
-                <button class="btn">×</button>
-                <button class="btn">÷</button>
-                <button class="btn">=</button>
-                <button class="btn">CLEAR</button>
+                <div id="digits-btn-container"></div>
+                <div id="func-btn-container">
+                    <button class="btn">+</button>
+                    <button class="btn">-</button>
+                    <button class="btn">×</button>
+                    <button class="btn">÷</button>
+                    <button class="btn">=</button>
+                    <button class="btn">CLEAR</button>
+                </div>
             </div>
         </div>
     </body>
