Create a function and eventlistener to display when the number buttons are clicked

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div id="calculator">
-            <div id="display">2 + 3 = 5</div>
+            <div id="display-container"></div>
             <div id="buttons-container">
                 <div id="digits-btn-container"></div>
                 <div id="func-btn-container">
