Add class operator to operator buttons

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <div id="buttons-container">
                 <div id="digits-btn-container"></div>
                 <div id="func-btn-container">
-                    <button class="btn">+</button>
-                    <button class="btn">-</button>
-                    <button class="btn">×</button>
-                    <button class="btn">÷</button>
+                    <button class="btn opertor">+</button>
+                    <button class="btn opertor">-</button>
+                    <button class="btn opertor">×</button>
+                    <button class="btn opertor">÷</button>
                     <button class="btn">=</button>
                     <button class="btn">CLEAR</button>
                 </div>
