Display the two numbers and the operator when clicked

--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
     </head>
     <body>
         <div id="calculator">
-            <div id="display-container"></div>
+            <div id="display-container">
+                <div id="first-number"></div>
+                <div id="operator-display"></div>
+                <div id="second-number"></div>
+            </div>
             <div id="buttons-container">
                 <div id="digits-btn-container"></div>
                 <div id="func-btn-container">
-                    <button class="btn opertor" value="+">+</button>
-                    <button class="btn opertor" value="-">-</button>
-                    <button class="btn opertor" value="*">×</button>
-                    <button class="btn opertor" value="/">÷</button>
+                    <button class="btn operator" value="+">+</button>
+                    <button class="btn operator" value="−">−</button>
+                    <button class="btn operator" value="×">×</button>
+                    <button class="btn operator" value="÷">÷</button>
                     <button class="btn">=</button>
                     <button class="btn">CLEAR</button>
                 </div>
