Make the calculator do some basic maths and display result

--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
                 <div id="first-number"></div>
                 <div id="operator-display"></div>
                 <div id="second-number"></div>
+                <div id="result"></div>
             </div>
             <div id="buttons-container">
-                <div id="digits-btn-container"></div>
+                <div id="digits-btn-container">
+                    <button id="negative" value="-">(-)</button>
+                </div>
                 <div id="func-btn-container">
                     <button class="btn operator" value="+">+</button>
                     <button class="btn operator" value="−">−</button>
                     <button class="btn operator" value="×">×</button>
                     <button class="btn operator" value="÷">÷</button>
-                    <button class="btn">=</button>
-                    <button class="btn">CLEAR</button>
+                    <button id="equals" class="btn">=</button>
+                    <button id="clear" class="btn">CLEAR</button>
                 </div>
             </div>
         </div>
